--- a/src/explore.ipynb
+++ b/src/explore.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,6 @@
     "from statsmodels.tsa.seasonal import seasonal_decompose\n",
     "from statsmodels.tsa.stattools import adfuller\n",
     "from statsmodels.graphics.tsaplots import plot_acf\n",
-    "\n",
     "import joblib"
    ]
   },
@@ -701,24 +700,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test statistic: -9.430263118334734\n",
-      "p-value: 5.212954111417252e-16\n"
+      "Dickey-Fuller test results:\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Test Statistic                -9.430263e+00\n",
+       "p-value                        5.212954e-16\n",
+       "#Lags Used                     1.200000e+01\n",
+       "Number of Observations Used    3.520000e+02\n",
+       "Critical Value (1%)           -3.449065e+00\n",
+       "Critical Value (5%)           -2.869786e+00\n",
+       "Critical Value (10%)          -2.571163e+00\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "data_diff = ts.diff().dropna()\n",
+    "ts_stationary = ts.diff().dropna()\n",
     "\n",
-    "result_diff = adfuller(data_diff)\n",
-    "print(\"Test statistic:\", result_diff[0])\n",
-    "print(\"p-value:\", result_diff[1])\n"
+    "test_stationarity(ts_stationary)\n"
    ]
   },
   {
@@ -736,20 +749,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pmdarima import auto_arima\n",
-    "\n",
-    "model = auto_arima(data_diff, seasonal=True, trace=True, m=12)\n",
-    "print(model.summary())\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train = data['sales'][:int(0.8 * len(data))]\n",
-    "test = data['sales'][int(0.8 * len(data)):]\n"
+    "train = ts[:int(0.8 * len(df))]\n",
+    "test = ts[int(0.8 * len(df)):]"
    ]
   },
   {
@@ -760,7 +761,7 @@
    "source": [
     "from statsmodels.tsa.arima.model import ARIMA\n",
     "\n",
-    "arima_model = ARIMA(train, order=(p, d, q))  # Substitua p, d, q pelos valores ajustados\n",
+    "arima_model = ARIMA(train, order=(p, d, q))  # Substituir p, d, q pelos valores ajustados\n",
     "arima_result = arima_model.fit()\n",
     "print(arima_result.summary())\n"
    ]
