Alternative_time_series_main_final

--- a/src/explore.ipynb
+++ b/src/explore.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
     "from statsmodels.graphics.tsaplots import plot_acf\n",
     "from pmdarima import auto_arima\n",
     "from statsmodels.tsa.arima.model import ARIMA\n",
-    "from sklearn.metrics import mean_squared_error, mean_absolute_error\n",
+    "\n",
     "import joblib"
    ]
   },
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +141,7 @@
        "4  2022-09-07 17:10:08.079328  66.013633"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +278,7 @@
        "4  2022-09-07 17:10:08.079328  66.013633"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +336,7 @@
        "Name: sales, dtype: float64"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -461,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -505,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -528,7 +528,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -555,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -599,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -620,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -664,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -703,39 +703,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Performing stepwise search to minimize aic\n",
-      " ARIMA(2,1,2)(1,0,1)[12] intercept   : AIC=1847.127, Time=1.25 sec\n",
+      "Performing stepwise search to minimize aic\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " ARIMA(2,1,2)(1,0,1)[12] intercept   : AIC=1847.127, Time=1.38 sec\n",
       " ARIMA(0,1,0)(0,0,0)[12] intercept   : AIC=2096.542, Time=0.01 sec\n",
-      " ARIMA(1,1,0)(1,0,0)[12] intercept   : AIC=1972.853, Time=0.15 sec\n",
-      " ARIMA(0,1,1)(0,0,1)[12] intercept   : AIC=inf, Time=0.53 sec\n",
+      " ARIMA(1,1,0)(1,0,0)[12] intercept   : AIC=1972.853, Time=0.16 sec\n",
+      " ARIMA(0,1,1)(0,0,1)[12] intercept   : AIC=inf, Time=0.56 sec\n",
       " ARIMA(0,1,0)(0,0,0)[12]             : AIC=2209.657, Time=0.01 sec\n",
-      " ARIMA(2,1,2)(0,0,1)[12] intercept   : AIC=1844.670, Time=0.95 sec\n",
-      " ARIMA(2,1,2)(0,0,0)[12] intercept   : AIC=1843.184, Time=0.39 sec\n",
-      " ARIMA(2,1,2)(1,0,0)[12] intercept   : AIC=1845.092, Time=0.83 sec\n",
-      " ARIMA(1,1,2)(0,0,0)[12] intercept   : AIC=1843.586, Time=0.14 sec\n",
-      " ARIMA(2,1,1)(0,0,0)[12] intercept   : AIC=1841.532, Time=0.33 sec\n",
-      " ARIMA(2,1,1)(1,0,0)[12] intercept   : AIC=1843.435, Time=2.89 sec\n",
-      " ARIMA(2,1,1)(0,0,1)[12] intercept   : AIC=1843.433, Time=0.87 sec\n",
-      " ARIMA(2,1,1)(1,0,1)[12] intercept   : AIC=inf, Time=0.96 sec\n",
-      " ARIMA(1,1,1)(0,0,0)[12] intercept   : AIC=1839.552, Time=0.17 sec\n",
-      " ARIMA(1,1,1)(1,0,0)[12] intercept   : AIC=1841.456, Time=0.47 sec\n",
-      " ARIMA(1,1,1)(0,0,1)[12] intercept   : AIC=1841.455, Time=0.36 sec\n",
-      " ARIMA(1,1,1)(1,0,1)[12] intercept   : AIC=1843.455, Time=0.53 sec\n",
+      " ARIMA(2,1,2)(0,0,1)[12] intercept   : AIC=1844.670, Time=0.87 sec\n",
+      " ARIMA(2,1,2)(0,0,0)[12] intercept   : AIC=1843.184, Time=0.44 sec\n",
+      " ARIMA(2,1,2)(1,0,0)[12] intercept   : AIC=1845.092, Time=0.70 sec\n",
+      " ARIMA(1,1,2)(0,0,0)[12] intercept   : AIC=1843.586, Time=0.15 sec\n",
+      " ARIMA(2,1,1)(0,0,0)[12] intercept   : AIC=1841.532, Time=0.36 sec\n",
+      " ARIMA(2,1,1)(1,0,0)[12] intercept   : AIC=1843.435, Time=1.33 sec\n",
+      " ARIMA(2,1,1)(0,0,1)[12] intercept   : AIC=1843.433, Time=0.92 sec\n",
+      " ARIMA(2,1,1)(1,0,1)[12] intercept   : AIC=inf, Time=1.12 sec\n",
+      " ARIMA(1,1,1)(0,0,0)[12] intercept   : AIC=1839.552, Time=0.19 sec\n",
+      " ARIMA(1,1,1)(1,0,0)[12] intercept   : AIC=1841.456, Time=0.59 sec\n",
+      " ARIMA(1,1,1)(0,0,1)[12] intercept   : AIC=1841.455, Time=0.32 sec\n",
+      " ARIMA(1,1,1)(1,0,1)[12] intercept   : AIC=1843.455, Time=0.59 sec\n",
       " ARIMA(0,1,1)(0,0,0)[12] intercept   : AIC=1839.586, Time=0.10 sec\n",
-      " ARIMA(1,1,0)(0,0,0)[12] intercept   : AIC=1970.972, Time=0.05 sec\n",
-      " ARIMA(0,1,2)(0,0,0)[12] intercept   : AIC=1839.607, Time=0.15 sec\n",
+      " ARIMA(1,1,0)(0,0,0)[12] intercept   : AIC=1970.972, Time=0.04 sec\n",
+      " ARIMA(0,1,2)(0,0,0)[12] intercept   : AIC=1839.607, Time=0.14 sec\n",
       " ARIMA(2,1,0)(0,0,0)[12] intercept   : AIC=1922.648, Time=0.06 sec\n",
-      " ARIMA(1,1,1)(0,0,0)[12]             : AIC=inf, Time=0.23 sec\n",
+      " ARIMA(1,1,1)(0,0,0)[12]             : AIC=inf, Time=0.20 sec\n",
       "\n",
       "Best model:  ARIMA(1,1,1)(0,0,0)[12] intercept\n",
-      "Total fit time: 11.462 seconds\n"
+      "Total fit time: 10.253 seconds\n"
      ]
     }
    ],
@@ -745,7 +751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -763,7 +769,7 @@
        "  <th>Date:</th>            <td>Wed, 27 Nov 2024</td> <th>  AIC                </th> <td>1839.552</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                <td>19:46:04</td>     <th>  BIC                </th> <td>1855.152</td>\n",
+       "  <th>Time:</th>                <td>20:08:27</td>     <th>  BIC                </th> <td>1855.152</td>\n",
        "</tr>\n",
        "<tr>\n",
        "  <th>Sample:</th>             <td>09-03-2022</td>    <th>  HQIC               </th> <td>1845.752</td>\n",
@@ -814,7 +820,7 @@
        "\\textbf{Dep. Variable:}          &        y         & \\textbf{  No. Observations:  } &    366      \\\\\n",
        "\\textbf{Model:}                  & SARIMAX(1, 1, 1) & \\textbf{  Log Likelihood     } &  -915.776   \\\\\n",
        "\\textbf{Date:}                   & Wed, 27 Nov 2024 & \\textbf{  AIC                } &  1839.552   \\\\\n",
-       "\\textbf{Time:}                   &     19:46:04     & \\textbf{  BIC                } &  1855.152   \\\\\n",
+       "\\textbf{Time:}                   &     20:08:27     & \\textbf{  BIC                } &  1855.152   \\\\\n",
        "\\textbf{Sample:}                 &    09-03-2022    & \\textbf{  HQIC               } &  1845.752   \\\\\n",
        "\\textbf{}                        &   - 09-03-2023   & \\textbf{                     } &             \\\\\n",
        "\\textbf{Covariance Type:}        &       opg        & \\textbf{                     } &             \\\\\n",
@@ -850,7 +856,7 @@
        "Dep. Variable:                      y   No. Observations:                  366\n",
        "Model:               SARIMAX(1, 1, 1)   Log Likelihood                -915.776\n",
        "Date:                Wed, 27 Nov 2024   AIC                           1839.552\n",
-       "Time:                        19:46:04   BIC                           1855.152\n",
+       "Time:                        20:08:27   BIC                           1855.152\n",
        "Sample:                    09-03-2022   HQIC                          1845.752\n",
        "                         - 09-03-2023                                         \n",
        "Covariance Type:                  opg                                         \n",
@@ -873,7 +879,7 @@
        "\"\"\""
       ]
      },
-     "execution_count": 121,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -892,7 +898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -913,7 +919,7 @@
        "Freq: D, dtype: float64"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -925,7 +931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -952,7 +958,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -961,7 +967,7 @@
        "['auto_arima_model.pkl']"
       ]
      },
-     "execution_count": 127,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -972,7 +978,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
